--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+     background-color: #7aa3d323;
+}
 header {
     background: url(Assets/Hero-bg.png);
     height: 698px;
@@ -10,7 +13,9 @@ display: flex;
    justify-content: space-between; 
    width: 1140px;
    height: 151px;
-margin-left: 100px;
+   margin-left: auto;
+   margin-right: auto;
+
 align-items: center;
 
 }
@@ -48,11 +53,12 @@ h2 {
 .div-1{
     height: 152px;
     width: 905px;
-
+margin-left: auto;
+margin-right: auto;
 
 
 gap: 37px;
-
+text-align: center;
 
    
 }
@@ -60,12 +66,12 @@ gap: 37px;
     font-size: 65px;
     font-weight: bold;
     color: #252432;
-  
+  display: inline-block;
     }
 .btn-2{
     width: 174px;
     height: 48px;
-    
+    align-items: center;
     padding: 36px, 12px;
     background-color: #4E47FF;
     border-radius: 10px;
@@ -79,4 +85,125 @@ gap: 37px;
     width: 102px;
     height: 24px;
     color: #FFFFFF;
+}
+.main-1{
+    display: flex;
+justify-content: space-around;
+align-items: center;
+width: 1140px;
+height: 328px;
+margin-top: 50px;
+margin-left: auto;
+margin-right: auto;
+}
+.div-3-h1{
+   width: 571px;
+   height: 49px;
+   font-size: 42px; 
+   font-weight: bold;
+}
+.action-img{
+    width: 403px;
+    height: 328px;
+    border-radius: 48px;
+    border-style: none;
+align-items: flex-end;
+}
+.div-3-p{
+    width: 517px;
+    height: 60px;
+    font-size: 24px;
+    margin-top: 10px;
+}
+.btn-3 {
+    width: 174px;
+    height: 48px;
+    align-items: center;
+    padding: 36px, 12px;
+    background-color: #4E47FF;
+    border-radius: 10px;
+    border: none;
+  align-items: center;
+    
+}
+a{
+    text-decoration: none;
+   
+}
+.btn-3-a{
+    width: 157px;
+    height: 24px;
+    font-size: 16px;
+    font-weight: bold;
+   color: white;
+}
+.active-user-div{
+    width: 1140px;
+    height: 306px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+  background-color: #7aa3d34f;
+  border-radius: 15px;
+}
+.main-2-p{
+    width: 856px;
+    height: 45px;
+    font-size: 38px;
+    font-weight: bold;
+    text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+}
+.user-no-div{
+    display: flex;
+    width: 856px;
+    height: 121px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.common-div{
+   width: 180px;
+   height: 121px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.h-3{
+    width: 162px;
+    height: 97px;
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+    margin-top: -10px;
+}
+.p-3{
+    width: 120px;
+    height: 24px;
+    font-size: 20px;
+    margin-top: -25px;
+}
+.user-review-div{
+    width: 1140px;
+    height: 342px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.p-4{
+    width: 1140px;
+    height: 49px;
+    margin-left: auto;
+    margin-right:auto ;
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+}
+.user-review{
+  width: 367px;
+  height: 243px;
+  background-color: white;
+}
+.img-p{
+    width: 116px;
+    height: 20px;
 }
