--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
      background-color: #7aa3d323;
+     max-width: 100%;
 }
 header {
     background: url(Assets/Hero-bg.png);
@@ -19,7 +20,7 @@ display: flex;
 align-items: center;
 
 }
-h2 {
+.logo{
     width:99px ;
     height: 51px;
     font-size: 34px;
@@ -188,22 +189,72 @@ a{
     height: 342px;
     margin-left: auto;
     margin-right: auto;
+
 }
 .p-4{
     width: 1140px;
     height: 49px;
-    margin-left: auto;
-    margin-right:auto ;
+    text-align: center;
     font-size: 42px;
     font-weight: bold;
-    text-align: center;
+}
+.udv{
+    display: flex;
+    justify-content: space-around;
 }
 .user-review{
-  width: 367px;
-  height: 243px;
-  background-color: white;
+    width: 367px;
+    height: 243px;
+    border-radius: 14px;
+    background-color: white;
+   
 }
-.img-p{
+.star-div{
     width: 116px;
     height: 20px;
+    margin-left: 24px;
+  
 }
+.review-div{
+    width: 319px;
+    height: 81px;
+    margin-left: 24px;
+   
+}
+.review-div-p{
+    width: 319px;
+    height: 44px;
+    font-size: 18px;
+    margin-top: -4px;
+}
+.reviewer-introduce-div{
+    width: 319px;
+    height: 46px;
+    margin-top: 10px;
+    display:flex;
+    margin-left: 24px;
+    margin-top: 20px;
+  
+}
+.reviwer-image-div{
+    width: 40px;
+    height: 40px;
+   margin-top: 20px;
+   
+
+}
+.reviewer-image{
+    width: fit-content;
+    border-radius: 50%;
+}
+.reviewer-name-div{
+width: 119px;
+height: 46px;
+margin-left: 10px;
+}
+.date-p{
+    width: 119px;
+    height: 22px;
+    margin-top: -10px;
+}
+
