--- a/style.css
+++ b/style.css
@@ -303,3 +303,60 @@ font-size: 16px;
   margin-top: 10px;
   
 }
+.getintouch-div-1{
+    width: 1140px;
+    height: 632px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+.getintouch-div-2{
+    width: 528px;
+    height: 232px;
+
+   
+  margin-left: auto;
+  margin-right: auto;
+    font-size: 90px;
+    font-weight: bold;
+}
+.getintouch-div-3{
+    width: 470px;
+    height: 490px;
+    gap: 19px;
+margin-top: 20px;
+margin-left: -10px;
+}
+input{
+    width: 497px;
+    height: 70px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: none;
+}
+label{
+    width: 497px;
+    height: 22px;
+    font-size: 18px;
+    font-weight: 400;
+}
+textarea{
+     width: 497px;
+    height: 70px;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
+    border: none;
+
+}
+.btn-5{
+    width: 497px;
+    height: 62px;
+    background-color: #4E47FF;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    margin-top: 5px;
+}
