--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ header {
     height: 698px;
     width: 1440px;
     max-width: 100%;
-    
+    margin-left: auto;
+    margin-right: auto;
 }
 header nav {
 display: flex;
@@ -80,6 +81,10 @@ text-align: center;
   
     
 }
+.btn-2:hover
+{
+    background-color: #0bb80b;
+}
 .span-2{
     font-weight: bold;
     font-size: 16px;
@@ -126,6 +131,10 @@ align-items: flex-end;
     border: none;
   align-items: center;
     
+}
+.btn-3:hover
+{
+    background-color: #a7b80b;
 }
 a{
     text-decoration: none;
@@ -293,6 +302,10 @@ border: none;
 font-size: 16px;
 
 }
+.btn-4:hover
+{
+    background-color: #ee068d;
+}
 
 .wc-big{
     width: 840px;
@@ -359,4 +372,59 @@ textarea{
     font-weight: bold;
     color: white;
     margin-top: 5px;
+}
+.btn-5:hover
+{
+    background-color: #e26a6a;
+}
+footer{
+  width: 1440px;
+height:428px ;
+background-color: white;
+margin-left: auto;
+margin-right: auto;
+}
+
+.footer-div-2{
+    width: 531px;
+    height: 177px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.footer-div-3{
+    width: 291px;
+    height: 121px;
+    font-size: 100px;
+    color: #4E47FF;
+    font-weight: bolder;
+    
+    
+}
+.footer-p{
+    width: 531px;
+    height: 48px;
+    margin-left: 28%;
+    
+    font: 35px;
+    margin-top: -25px;
+}
+.footer-div-4{
+    width: 401px;
+    height: 24px;
+  margin-left: 25%;
+  
+}
+ul{
+    list-style: none;
+  
+}
+li{
+    display: inline-block;
+
+}
+ul li a{
+font-size: 18px;
+color: #252432;
+justify-items: center;
+margin-left: 18px;
 }
